[gd_scene load_steps=22 format=3 uid="uid://b5dgmqqaqyfji"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_tiwh4"]
[ext_resource type="Texture2D" uid="uid://8djg14go0nen" path="res://HUD/Sprite-0002.png" id="1_udfon"]
[ext_resource type="Texture2D" uid="uid://dude5x70s1uxo" path="res://HUD/Sprite-0003.png" id="2_dvwme"]
[ext_resource type="Texture2D" uid="uid://cneemq2cyywk1" path="res://HUD/Sprite-0004.png" id="3_px40y"]
[ext_resource type="Texture2D" uid="uid://dg6ct7kq0aky5" path="res://HUD/Sprite-0005.png" id="4_a2pcr"]
[ext_resource type="Texture2D" uid="uid://br2p8xvc0xckt" path="res://HUD/Sprite-0006.png" id="5_lk44l"]
[ext_resource type="Texture2D" uid="uid://caecli2j7lxj3" path="res://HUD/Sprite-0001.png" id="6_undse"]
[ext_resource type="Texture2D" uid="uid://c3j27c4wmd742" path="res://HUD/Pause-0001.png" id="7_2sne4"]
[ext_resource type="Texture2D" uid="uid://bjeo3mwxrnigf" path="res://HUD/Pause-0002.png" id="8_cbk61"]
[ext_resource type="Script" path="res://HUD/PauseButton.gd" id="9_11hk1"]
[ext_resource type="Texture2D" uid="uid://dbftmol76mbjf" path="res://HUD/RectBar.png" id="10_fer63"]
[ext_resource type="FontFile" uid="uid://ls1xuryhl6nt" path="res://assets/font/static/Rubik-Bold.ttf" id="11_hiqv0"]
[ext_resource type="Texture2D" uid="uid://gig3lg8avmak" path="res://HUD/Commands-0001.png" id="12_8ttyq"]
[ext_resource type="Script" path="res://HUD/MenuButton.gd" id="12_vubqe"]
[ext_resource type="Texture2D" uid="uid://b5pvxgn565c86" path="res://HUD/Commands-0002.png" id="13_6eqkh"]
[ext_resource type="Texture2D" uid="uid://b3blqfraaxm5j" path="res://HUD/Commands-0004.png" id="14_3pcgx"]
[ext_resource type="Script" path="res://HUD/OptionButton.gd" id="14_vv861"]
[ext_resource type="Texture2D" uid="uid://dcto4am1026qh" path="res://HUD/Commands-0003.png" id="15_02vvx"]
[ext_resource type="PackedScene" uid="uid://cg52sujci6iqw" path="res://src/Volumslider.tscn" id="15_kl833"]
[ext_resource type="Texture2D" uid="uid://dco75qrxc3s0o" path="res://HUD/Commands-0005.png" id="16_nop38"]
[ext_resource type="Script" path="res://HUD/TimerValue.gd" id="18_kjtwi"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tiwh4")

[node name="LIFE" type="CanvasLayer" parent="."]

[node name="LifeAct" type="TextureProgressBar" parent="LIFE"]
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
value = 100.0
fill_mode = 3
texture_progress = ExtResource("1_udfon")

[node name="Life1" type="TextureRect" parent="LIFE"]
visible = false
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dvwme")

[node name="Life2" type="TextureRect" parent="LIFE"]
visible = false
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_px40y")

[node name="Life3" type="TextureRect" parent="LIFE"]
visible = false
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_a2pcr")

[node name="Life4" type="TextureRect" parent="LIFE"]
visible = false
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_lk44l")

[node name="Bordi" type="TextureRect" parent="LIFE"]
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_undse")

[node name="PauseButton" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 40.0
offset_right = 248.0
offset_bottom = 360.0
grow_horizontal = 0
scale = Vector2(0.1, 0.1)
focus_mode = 0
texture_normal = ExtResource("7_2sne4")
texture_pressed = ExtResource("8_cbk61")
stretch_mode = 4
script = ExtResource("9_11hk1")

[node name="MenuButton" type="TextureButton" parent="PauseButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2580.0
offset_top = 2640.0
offset_right = -2280.0
offset_bottom = 2790.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 2)
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("10_fer63")
script = ExtResource("12_vubqe")

[node name="Menu" type="Label" parent="PauseButton/MenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_hiqv0")
theme_override_font_sizes/font_size = 60
text = "Menu"

[node name="OptionButton" type="TextureButton" parent="PauseButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2580.0
offset_top = 3840.0
offset_right = -2280.0
offset_bottom = 3990.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 2)
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("10_fer63")
script = ExtResource("14_vv861")

[node name="Option" type="Label" parent="PauseButton/OptionButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_hiqv0")
theme_override_font_sizes/font_size = 60
text = "Option"

[node name="Control" parent="PauseButton/OptionButton" instance=ExtResource("15_kl833")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -246.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 370.0
grow_vertical = 0

[node name="Directions" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Base" type="TextureRect" parent="Directions"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -343.4
offset_right = 504.0
offset_bottom = -19.4
grow_vertical = 0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(0, 324)
texture = ExtResource("12_8ttyq")

[node name="Up" type="TextureButton" parent="Directions"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -343.4
offset_right = 504.0
offset_bottom = -19.4
grow_vertical = 0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(0, 324)
texture_normal = ExtResource("13_6eqkh")

[node name="Down" type="TextureButton" parent="Directions"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -343.4
offset_right = 504.0
offset_bottom = -19.4
grow_vertical = 0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(0, 324)
texture_normal = ExtResource("14_3pcgx")

[node name="Right" type="TextureButton" parent="Directions"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -343.4
offset_right = 504.0
offset_bottom = -19.4
grow_vertical = 0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(0, 324)
texture_normal = ExtResource("15_02vvx")

[node name="Left" type="TextureButton" parent="Directions"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -343.4
offset_right = 504.0
offset_bottom = -19.4
grow_vertical = 0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(0, 324)
texture_normal = ExtResource("16_nop38")

[node name="TimerValue" type="Label" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 40.0
offset_right = 261.0
offset_bottom = 66.0
script = ExtResource("18_kjtwi")

[connection signal="pressed" from="PauseButton" to="PauseButton" method="_on_pressed"]
[connection signal="pressed" from="PauseButton/MenuButton" to="PauseButton/MenuButton" method="_on_pressed"]
[connection signal="pressed" from="PauseButton/OptionButton" to="PauseButton/OptionButton" method="_on_pressed"]
